[tool.poetry]
name = "9781838825669_code"
version = "0.1.0"
description = ""
authors = ["Shawn Cicoria <github@cicoria.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.3"
scipy = "^1.4.1"
scikit-learn = "^0.22.2"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
autopep8 = "^1.5.2"
flake8 = "^3.7.9"
jupyterlab = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
